# zoomfft2d

./: README.md  functions.py  offaxis.ipynb  pyproject.toml  zoomfft2.py
.github/workflows/: python-publish.yml
example/: offaxis.ipynb
zoomfft2d/: __init__.py  zoomfft2d.py
